--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html>
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Con.Soul</title>
+    <title>CON.SOUL</title>
     <link rel="stylesheet" type="text/css" href="styles.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
@@ -28,7 +28,7 @@
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav">
           <li class="nav-item">
-            <a class="nav-link" href="#hero">HOME</a>
+            <a class="nav-link" href="Login.html">LOGIN</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#about">ABOUT</a>
@@ -191,6 +191,31 @@
           </div>
         </section>
           <br><br>
+
+<!-- ICON SECTION --> 
+<section class="icon-section">
+    <div class="container">
+        <h2 class="mb-5"> Our Features</h2>
+        <div class="row">
+            <div class="col-md-4">
+                <img src="https://www.svgrepo.com/show/9571/glasses.svg" alt="Eyewear" class="feature-icon">
+                <h2>Custom Eyewear Design</h2>
+                <p>At Con.soul, we offer bespoke eyewear design services. Whether you’re looking to replicate a favorite vintage look or create a unique piece that reflects your personal style, our skilled designers will work with you to craft the perfect pair of glasses.</p>
+            </div>
+            <div class="col-md-4">
+                <img src="https://www.svgrepo.com/show/438172/communication-bubble-chat-comments-conversation-message-icon.svg" alt="Consultation" class="feature-icon">
+                <h2>Style Consultation</h2>
+                <p>Not sure which accessories best suit your look? Our style consultation service is here to help. Our fashion experts will guide you through our collection, providing personalized advice to ensure you find the perfect pieces to complement your style and enhance your wardrobe.</p>
+            </div>
+            <div class="col-md-4">
+                <img src="https://www.svgrepo.com/show/390887/cellphone.svg" alt="feature-icon" class="feature-icon">
+                <h2>Discover Favorites</h2>
+                <p>Experience the convenience of shopping from home with our innovative virtual try-on service. Using advanced technology, you can see how our glasses and accessories will look on you in real-time. Try on different styles, colors, and shapes to find the perfect fit without leaving your couch.</p>
+                </div> 
+            </div>
+        </div>
+    </section>
+    <section>
 
 <!-- Meet The Team -->
 <section id="team-0" class="team">
