--- a/index.html
+++ b/index.html
@@ -63,133 +63,119 @@
             </section>
         </section>
 
-      <section id="product-0" class="product">
-          <h2>Our Products</h2>
-          <div class="row">
-            <div class="card">
-                <img src="https://www-prd-kr.gentlemonster.com/media/catalog/product/cache/6c6f229b8a7ab97f51028776641e27d1/1/1/11001_DADA-01-2_2.jpg" alt="Sunglasses">
-                <div class="card-content">
-                    <h3 class="card-title">DADA 01</h3>
-                    <p class="card-price">₱17,000.00</p>
-                    <p class="card-colors">+5 Colors</p>
-                    <a href="cart.html" class="button-0">ADD TO CART</a>
-                    <i class="fas fa-heart" aria-hidden="true"></i>
-                </div>
-            </div>
-            <div class="card">
-                <img src="https://www-prd-kr.gentlemonster.com/media/catalog/product/cache/6c6f229b8a7ab97f51028776641e27d1/1/1/11001_FEAR_X_G13_2.jpg" alt="Sunglasses">
-                <div class="card-content">
-                    <h3 class="card-title">FEAR X G13</h3>
-                    <p class="card-price"> ₱‌18,000.00</p>
-                    <p class="card-colors">+4 Colors</p>
-                    <a href="cart.html" class="button-0">ADD TO CART</a>
+<!-- PRODUCTS -->
+<section class="product">
+    <div class="card">
+        <img src="https://www-prd-kr.gentlemonster.com/media/catalog/product/cache/6c6f229b8a7ab97f51028776641e27d1/1/1/11001_DADA-01-2_2.jpg" alt="Sunglasses">
+        <div class="card-content">
+            <h3 class="card-title">DADA 01</h3>
+            <p class="card-price">₱17,000.00</p>
+            <button class="button add-to-cart" data-product="DADA 01" data-price="17000">ADD TO CART</button>
+            <i class="fa fa-heart" id="heart"></i>
+        </div>
+    </div>
+    <div class="card">
+        <img src="https://www-prd-kr.gentlemonster.com/media/catalog/product/cache/6c6f229b8a7ab97f51028776641e27d1/1/1/11001_FEAR_X_G13_2.jpg" alt="Sunglasses">
+        <div class="card-content">
+            <h3 class="card-title">FEAR X G13</h3>
+            <p class="card-price">₱18,000.00</p>
+            <button class="button add-to-cart" data-product="FEAR X G13" data-price="18000">ADD TO CART</button>
+            <i class="fa fa-heart" id="heart"></i>
+        </div>
+    </div>
+    <div class="card">
+        <img src="https://www-prd-kr.gentlemonster.com/media/catalog/product/cache/6c6f229b8a7ab97f51028776641e27d1/1/1/11001_EX_S01_2.jpg" alt="Sunglasses">
+        <div class="card-content">
+            <h3 class="card-title">EX S01</h3>
+            <p class="card-price">₱21,000.00</p>
+            <button class="button add-to-cart" data-product="EX S01" data-price="21000">ADD TO CART</button>
+            <i class="fa fa-heart" id="heart"></i>
+        </div>
+    </div>
+    <div class="card">
+        <img src="https://www-prd-kr.gentlemonster.com/media/catalog/product/cache/6c6f229b8a7ab97f51028776641e27d1/1/1/11001_ATEMPO_01_2.jpg" alt="Sunglasses">
+        <div class="card-content">
+            <h3 class="card-title">ATEMPO 01 2</h3>
+            <p class="card-price">₱17,000.00</p>
+            <button class="button add-to-cart" data-product="ATEMPO 01 2" data-price="17000">ADD TO CART</button>
+            <i class="fa fa-heart" id="heart"></i>
+        </div>
+    </div>
+    <div class="card">
+        <img src="https://www-prd-kr.gentlemonster.com/media/catalog/product/cache/6c6f229b8a7ab97f51028776641e27d1/b/a/barrette-02_2_1_1.jpg" alt="Sunglasses">
+        <div class="card-content">
+            <h3 class="card-title">BARETTE 02</h3>
+            <p class="card-price">₱22,000.00</p>
+            <button class="button add-to-cart" data-product="BARETTE 02" data-price="22000">ADD TO CART</button>
+            <i class="fa fa-heart" id="heart"></i>
+        </div>
+    </div>
+    <div class="card">
+        <img src="https://www-prd-kr.gentlemonster.com/media/catalog/product/cache/6c6f229b8a7ab97f51028776641e27d1/d/o/donutbun-bl5_2_1_1.jpg" alt="Sunglasses">
+        <div class="card-content">
+            <h3 class="card-title">DONUTBUN Bl5</h3>
+            <p class="card-price">₱17,000.00</p>
+            <button class="button add-to-cart" data-product="DONUTBUN Bl5" data-price="17000">ADD TO CART</button>
+            <i class="fa fa-heart" id="heart"></i>
+        </div>
+    </div>
+    <div class="card">
+        <img src="https://www-prd-kr.gentlemonster.com/media/catalog/product/cache/6c6f229b8a7ab97f51028776641e27d1/1/1/11001_TOTE_01_2.jpg" alt="Sunglasses">
+        <div class="card-content">
+            <h3 class="card-title">TOTE 01</h3>
+            <p class="card-price">₱14,000.00</p>
+            <button class="button add-to-cart" data-product="TOTE 01" data-price="14000">ADD TO CART</button>
+            <i class="fa fa-heart" id="heart"></i>
+        </div>
+    </div>
+    <div class="card">
+        <img src="https://www-prd-kr.gentlemonster.com/media/catalog/product/cache/6c6f229b8a7ab97f51028776641e27d1/1/1/11001_MONTA_01_2.jpg" alt="Sunglasses">
+        <div class="card-content">
+            <h3 class="card-title">MONTA 01</h3>
+            <p class="card-price">₱12,000.00</p>
+            <button class="button add-to-cart" data-product="MONTA 01" data-price="12000">ADD TO CART</button>
+            <i class="fa fa-heart" id="heart"></i>
+        </div>
+    </div>
+    <div class="card">
+        <img src="https://www-prd-kr.gentlemonster.com/media/catalog/product/cache/6c6f229b8a7ab97f51028776641e27d1/1/1/11001_AVON_W2_2.jpg" alt="Sunglasses">
+        <div class="card-content">
+            <h3 class="card-title">AVON W2</h3>
+            <p class="card-price">₱16,000.00</p>
+            <button class="button add-to-cart" data-product="AVON W2" data-price="16000">ADD TO CART</button>
+            <i class="fa fa-heart" id="heart"></i>
+        </div>
+    </div>
+    <div class="card">
+        <img src="https://www-prd-kr.gentlemonster.com/media/catalog/product/cache/6c6f229b8a7ab97f51028776641e27d1/1/1/11001_MOLTA-BRC11-2.jpg" alt="Sunglasses">
+        <div class="card-content">
+            <h3 class="card-title">MOLTA BRC11</h3>
+            <p class="card-price">₱13,000.00</p>
+            <button class="button add-to-cart" data-product="MOLTA BRC11" data-price="13000">ADD TO CART</button>
+            <i class="fa fa-heart" id="heart"></i>
+        </div>
+    </div>
+    <div class="card">
+        <img src="https://www-prd-kr.gentlemonster.com/media/catalog/product/cache/6c6f229b8a7ab97f51028776641e27d1/1/1/11001_VOID-01-2_2.jpg" alt="Sunglasses">
+        <div class="card-content">
+            <h3 class="card-title">VOID 01</h3>
+            <p class="card-price">₱19,000.00</p>
+            <button class="button add-to-cart" data-product="VOID 01" data-price="19000">ADD TO CART</button>
+            <i class="fa fa-heart" id="heart"></i>
+        </div>
+    </div>
+    <div class="card">
+        <img src="https://www-prd-kr.gentlemonster.com/media/catalog/product/cache/6c6f229b8a7ab97f51028776641e27d1/1/1/11001_TTA_01_2.jpg" alt="Sunglasses">
+        <div class="card-content">
+            <h3 class="card-title">TTA 01</h3>
+            <p class="card-price">₱23,000.00</p>
+            <button class="button add-to-cart" data-product="TTA 01" data-price="23000">ADD TO CART</button>
+            <i class="fa fa-heart" id="heart"></i>
+        </div>
+    </div>
+</section>
 
-                    <i class="fas fa-heart" aria-hidden="true"></i>
-                </div>
-            </div>
-            <div class="card">
-                <img src="https://www-prd-kr.gentlemonster.com/media/catalog/product/cache/6c6f229b8a7ab97f51028776641e27d1/1/1/11001_EX_S01_2.jpg" alt="Sunglasses">
-                <div class="card-content">
-                    <h3 class="card-title">EX S01</h3>
-                    <p class="card-price">₱21,000.00</p>
-                    <p class="card-colors">+3 Colors</p>
-                    <a href="cart.html" class="button-0">ADD TO CART</a>
 
-                    <i class="fas fa-heart" aria-hidden="true"></i>
-                </div>
-            </div>
-            <div class="card">
-                <img src="https://www-prd-kr.gentlemonster.com/media/catalog/product/cache/6c6f229b8a7ab97f51028776641e27d1/1/1/11001_ATEMPO_01_2.jpg" alt="Sunglasses">
-                <div class="card-content">
-                    <h3 class="card-title">ATEMPO 01 2</h3>
-                    <p class="card-price">₱17,000.00</p>
-                    <p class="card-colors">+5 Colors</p>
-                    <a href="cart.html" class="button-0">ADD TO CART</a>
-                    <i class="fas fa-heart" aria-hidden="true"></i>
-                </div>
-            </div>
-            <div class="card">
-                <img src="https://www-prd-kr.gentlemonster.com/media/catalog/product/cache/6c6f229b8a7ab97f51028776641e27d1/b/a/barrette-02_2_1_1.jpg" alt="Sunglasses">
-                <div class="card-content">
-                    <h3 class="card-title"> BARETTE 02</h3>
-                    <p class="card-price">₱22,000.00</p>
-                    <p class="card-colors">+5 Colors</p>
-                    <a href="cart.html" class="button-0">ADD TO CART</a>
-                    <i class="fas fa-heart" aria-hidden="true"></i>
-                </div>
-            </div>
-            <div class="card">
-                <img src="https://www-prd-kr.gentlemonster.com/media/catalog/product/cache/6c6f229b8a7ab97f51028776641e27d1/d/o/donutbun-bl5_2_1_1.jpg" alt="Sunglasses">
-                <div class="card-content">
-                    <h3 class="card-title"> DONUTBUN Bl5</h3>
-                    <p class="card-price">₱17,000.00</p>
-                    <p class="card-colors">+5 Colors</p>
-                    <a href="cart.html" class="button-0">ADD TO CART</a>
-                    <i class="fas fa-heart" aria-hidden="true"></i>
-                </div>
-            </div>
-            <div class="card">
-                <img src="https://www-prd-kr.gentlemonster.com/media/catalog/product/cache/6c6f229b8a7ab97f51028776641e27d1/1/1/11001_TOTE_01_2.jpg" alt="Sunglasses">
-                <div class="card-content">
-                    <h3 class="card-title">TOTE 01</h3>
-                    <p class="card-price">₱14,000.00</p>
-                    <p class="card-colors">+3 Colors</p>
-                    <a href="cart.html" class="button-0">ADD TO CART</a>
-                    <i class="fas fa-heart" aria-hidden="true"></i>
-                </div>
-            </div>
-            <div class="card">
-                <img src="https://www-prd-kr.gentlemonster.com/media/catalog/product/cache/6c6f229b8a7ab97f51028776641e27d1/1/1/11001_MONTA_01_2.jpg" alt="Sunglasses">
-                <div class="card-content">
-                    <h3 class="card-title">MONTA 01</h3>
-                    <p class="card-price">₱12,000.00</p>
-                    <p class="card-colors">+5 Colors</p>
-                    <a href="cart.html" class="button-0">ADD TO CART</a>
-                    <i class="fas fa-heart" aria-hidden="true"></i>
-                </div>
-            </div>
-            <div class="card">
-                <img src="https://www-prd-kr.gentlemonster.com/media/catalog/product/cache/6c6f229b8a7ab97f51028776641e27d1/1/1/11001_AVON_W2_2.jpg" alt="Sunglasses">
-                <div class="card-content">
-                    <h3 class="card-title">AVON W2</h3>
-                    <p class="card-price">₱16,000.00</p>
-                    <p class="card-colors">+5 Colors</p>
-                    <a href="cart.html" class="button-0">ADD TO CART</a>
-                    <i class="fas fa-heart" aria-hidden="true"></i>
-                </div>
-            </div>
-            <div class="card">
-                <img src="https://www-prd-kr.gentlemonster.com/media/catalog/product/cache/6c6f229b8a7ab97f51028776641e27d1/1/1/11001_MOLTA-BRC11-2.jpg" alt="Sunglasses">
-                <div class="card-content">
-                    <h3 class="card-title">MOLTA BRC11 </h3>
-                    <p class="card-price">₱13,000.00</p>
-                    <p class="card-colors">+3 Colors</p>
-                    <a href="cart.html" class="button-0">ADD TO CART</a>
-                    <i class="fas fa-heart" aria-hidden="true"></i>
-                </div>
-            </div>
-            <div class="card">
-                <img src="https://www-prd-kr.gentlemonster.com/media/catalog/product/cache/6c6f229b8a7ab97f51028776641e27d1/1/1/11001_VOID-01-2_2.jpg" alt="Sunglasses">
-                <div class="card-content">
-                    <h3 class="card-title"> VOID 01</h3>
-                    <p class="card-price"> ₱19,000.00</p>
-                    <p class="card-colors">+3 Colors</p>
-                    <a href="cart.html" class="button-0">ADD TO CART</a>
-                    <i class="fas fa-heart" aria-hidden="true"></i>
-                </div>
-            </div>
-            <div class="card">
-                <img src="https://www-prd-kr.gentlemonster.com/media/catalog/product/cache/6c6f229b8a7ab97f51028776641e27d1/1/1/11001_TTA_01_2.jpg" alt="Sunglasses">
-                <div class="card-content">
-                    <h3 class="card-title">TTA 01</h3>
-                    <p class="card-price">₱23,000.00</p>
-                    <p class="card-colors">+2 Colors</p>
-                    <a href="cart.html" class="button-0">ADD TO CART</a>
-                    <i class="fas fa-heart" aria-hidden="true"></i>
-                </div>
-              </div>
-          </div>
-        </section>
           <br><br>
 
 <!-- ICON SECTION --> 
@@ -318,10 +304,9 @@
 
   <!-- JavaScript -->
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-  <script src="script.js"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+  <script src="cart.js"></script>
   <script src="favourites.js"></script>
 
-
-  
 </body>
 </html>
