--- a/index.html
+++ b/index.html
@@ -250,51 +250,79 @@
     </section>
 
 <!-- FORM -->
-<h1>CONTACT US</h1>
-<section id="contact">
-    <div class="container">
-        <div class="row">
-            <div class="col-md-6 form-container">
-                <form class="contact-form">
-                    <div class="form-group">
-                        <label for="name">Your Name:</label>
-                        <input type="text" id="name" class="form-control" placeholder="">
-                    </div>
-                    <div class="form-group">
-                        <label for="phone">Phone no.:</label>
-                        <input type="tel" id="phone" pattern="[0-9]{10}" class="form-control" placeholder="">
-                    </div>
-                    <div class="form-group">
-                        <label for="email">Email:</label>
-                        <input type="email" id="email" class="form-control" placeholder="">
-                    </div>
-                    <div class="form-group">
-                        <label for="message">Message:</label>
-                        <textarea id="message" class="form-control" rows="4" placeholder=""></textarea>
-                    </div>
-                    <button type="submit" class="btn button">Submit</button>
-                </form>
-            </div>
-            <br>
-            <div class="col-md-6 contact-info">
-                <h2>Contact Information</h2>
-                <address>
-                    <div class="follow"><b><i class="fa fa-map-marker"></i> </b>Alabang</div>
-                    <div class="follow"><b><i class="fa fa-mobile"></i> </b>123 4567 890</div>
-                    <div class="follow"><b><i class="fa fa-envelope"></i> </b><a href="mailto:con.soul@gmail.com">con.soul@gmail.com</a></div>
-                </address>
-                <div class="follow">
-                    <label><b>Get Social </b></label>
-                    <a href="https://www.facebook.com/"><i class="fa fa-facebook"></i></a>
-                    <a href="https://www.instagram.com/"><i class="fa fa-instagram"></i></a>
-                    <a href="https://twitter.com/login"><i class="fa fa-twitter"></i></a>
-                    <a href="https://web.telegram.org/"><i class="fa fa-telegram"></i></a>
-                </div>
-            </div>
+<section id="contact-0" class="contact">
+  <div id="container">
+    <h1 style="text-align: center;"> CONTACT FORM </h1>
+
+    <div class="row">
+      <div class="col-md-6">
+        <form class="contact-form">
+          <div class="form-group">
+            <input
+              type="text"
+              class="form-control"
+              placeholder="Your Name"
+            />
+          </div>
+          <div class="form-group">
+            <input
+              class="form-control"
+              placeholder="Phone No."
+            />
+          </div>
+          <div class="form-group">
+            <input
+              type="email"
+              class="form-control"
+              placeholder="Your Email ID"
+            />
+          </div>
+          <div class="form-group">
+            <textarea
+              class="form-control"
+              rows="4"
+              placeholder="Message"
+            ></textarea>
+          </div>
+          <button type="submit" class="button-2" id="button-2"> SUBMIT
+          </button>
+        </form>
+      </div>
+      <div class="col-md-6 contact-info">
+        <div class="follow">
+          <b>Address:</b><i class="fa fa-map-marker"></i> Alabang
+    
         </div>
+        <div class="follow">
+          <b>Phone:</b><i class="fa fa-phone"></i>+123 4567 890
+        </div>
+        <div class="follow">
+          <b>Email:</b><i class="fa fa-envelope-o"></i> Con.Soul@website.com
+        </div>
+        <div class="follow">
+          <label><b>Get Social:</b></label>
+          <a href="https://www.facebook.com/"><i class="fa -facebook"> </i></a>
+          <a href="https://www.youtube.com/"><i class="fa fa-youtube-play"> </i></a>
+          <a href="https://x.com/"><i class="fa fa-twitter"> </i></a>
+          <a href="https://support.google.com/answer/2451065?hl=en"><i class="fa fa-google-plus"> </i></a>
+        </div>  
+      </div>
     </div>
+  </div>
+</section>
+<!--footer-->
+
+<section id="footer">
+  <div class="container text-center">
+  </div>
 </section>
 
+<!--footer end-->
+<script src="js/smooth-scroll.js"></script>
+
+<script>
+  var scroll = new SmoothScroll('a[href*="#"]');
+</script>
     </main>
 
 
