--- a/Login.html
+++ b/Login.html
@@ -11,6 +11,7 @@
     <div class="container mt-5">
         <form class="form" id="loginForm" action="index.html">
             <div class="form-group">
+            <H1 style="text-align: center; font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;" > LOGIN </H1>
                 <label for="email">Email</label>
                 <div class="inputForm d-flex align-items-center">
                     <svg height="20" viewBox="0 0 32 32" width="20" xmlns="http://www.w3.org/2000/svg">
@@ -38,8 +39,8 @@
                 </div>
                 <a href="forget_password.html" class="span">Forgot password?</a>
             </div>
-            <button type="submit" class="btn btn-primary btn-block">Sign In</button>
-            <p class="p text-center">Don't have an account? <a href="signup.html" class="span">Sign Up</a></p>
+            <button type="submit" class="btn btn- btn-block">SIGN IN</button>
+            <p class="p text-center"> Don't have an account? <a href="signup.html" class="span">Sign Up</a></p>
         </form>
     </div>
 </body>
