--- a/checkout.html
+++ b/checkout.html
@@ -15,14 +15,12 @@
         <section class="payment-form dark">
             <div class="container">
                 <div class="block-heading">
-                    <h2>Payment</h2>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc quam urna, dignissim nec auctor in, mattis vitae leo.</p>
                 </div>
                 <form id="payment-form"> <!-- Ensure your form has an ID -->
                     <div class="products">
-                        <h3 class="title">Checkout</h3>
+                        <h1 class="title" style="text-align: center; font-size: 40px;"> PAYMENT</h1>
                         <div class="item">
-                            <section id="order-summary"> <!-- Order Summary Section -->
+                            <section id="order-summary" style="text-align: center">
                                 <h2>Order Summary</h2>
                                 <div id="checkout-details"></div>
                             </section>
@@ -51,7 +49,7 @@
                                 <input id="cvv" type="text" class="form-control" placeholder="CVC" aria-label="Card Holder" aria-describedby="basic-addon1" required>
                             </div>
                             <div class="form-group col-sm-12">
-                                <button type="submit" class="btn btn-primary btn-block">Proceed</button>
+                                <button type="submit" class="button-09">CHECKOUT</button>
                             </div>
                         </div>
                     </div>
