--- a/signup.html
+++ b/signup.html
@@ -10,7 +10,7 @@
 <body>
     <div class="container mt-5">
         <form class="form" id="signupForm" action="index.html">
-            <h2 class="text-center">Sign Up</h2>
+            <h2 class="text-center">SIGN UP</h2>
             <div class="form-group">
                 <label for="email">Email</label>
                 <div class="inputForm d-flex align-items-center">
@@ -32,7 +32,7 @@
                     <input type="password" id="password" class="form-control" placeholder="Enter your Password" required>
                 </div>
             </div>
-            <button type="submit" class="btn btn-primary btn-block">Sign Up</button>
+            <button type="submit" class="btn btn btn-block">Sign Up</button>
             <p class="p text-center">Already have an account? <a href="login.html" class="span">Sign In</a></p>
         </form>
     </div>
