--- a/cart.html
+++ b/cart.html
@@ -7,34 +7,33 @@
 <body>
     <div id="site">
         <header id="masthead">
-            <h1>Your Shopping Cart</h1>
         </header>
         <div id="content">
             <table class="shopping-cart">
+                <h1 style="text-align: center;">SHOPPING CART</h1>
+
                 <thead>
                     <tr>
-                        <th scope="col">Item</th>
-                        <th scope="col">Qty</th>
-                        <th scope="col">Price</th>
-                        <th scope="col">Total</th>
-                        <th scope="col">Actions</th>
+                        <th scope="col">ITEM</th>
+                        <th scope="col">QTY</th>
+                        <th scope="col">PRICE</th>
+                        <th scope="col">TOTAL</th>
+                        <th scope="col">ACTIONS</th>
                     </tr>
                 </thead>
                 <tbody id="cart-items"></tbody>
             </table>
             <p id="sub-total">
-                <strong>Sub Total</strong>: <span id="stotal"></span>
+                <strong>SUB TOTAL</strong>: <span id="stotal"></span>
             </p>
             <ul id="shopping-cart-actions">
-                <li><a href="index.html" class="btn">Continue Shopping</a></li>
-                <li><a href="#" class="btn" id="clear-cart">Clear Cart</a></li>
-                <li><button id="checkout-button" class="btn">Proceed to Checkout</button></li>
+                <li><a href="index.html" class="btn">CONTINUE SHOPPING</a></li>
+                <li><a href="#" class="btn" id="clear-cart"> CLEAR CART</a></li>
+                <li><button id="checkout-button" class="btn">BUY NOW</button></li>
             </ul>
         </div>
         <footer id="site-info">
-            <p>&copy; Your Website. All rights reserved.</p>
-        </footer>
-    </div>
+    
 
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="cart.js"></script>
