--- a/index.html
+++ b/index.html
@@ -100,10 +100,10 @@
 <br><br>
 
 <!-- PRODUCTS -->
-<h1 style="text-align: center; padding-bottom: 25px">PRODUCTS </h1>
+<h1 style="text-align: center; padding-bottom: 25px">PRODUCTS</h1>
 
-<section id="product-0" class="product" >
-    <div class="card card-hover">
+<section id="product-0" class="product">
+    <div class="card card-hover h-100">
         <img src="https://www-prd-kr.gentlemonster.com/media/catalog/product/cache/6c6f229b8a7ab97f51028776641e27d1/1/1/11001_DADA-01-2_2.jpg" alt="Sunglasses">
         <div class="card-content">
             <h3 class="card-title">DADA 01</h3>
