--- a/checkout.html
+++ b/checkout.html
@@ -16,7 +16,7 @@
             <div class="container">
                 <div class="block-heading">
                 </div>
-                <form id="payment-form"> <!-- Ensure your form has an ID -->
+                <form id="payment-form"> 
                     <div class="products">
                         <h1 class="title" style="text-align: center; font-size: 40px;"> PAYMENT</h1>
                         <div class="item">
